--- a/template/journal.html
+++ b/template/journal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Intima - Journal Intime</title>
+  <title>Accueil</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/journal.css') }}">
 </head>
 <body>
@@ -12,7 +12,7 @@
       <h1>Intima</h1>
       <nav>
         <ul>
-          <li><a href="../main.html">Accueil</a></li>
+          <li><a href="{{ url_for('page_accueil') }}">Accueil</a></li>
           <li><a href="#entries">A propos</a></li>
           <li><a href="#new-entry">Contact</a></li>
         </ul>
