--- a/static/css/journal.css
+++ b/static/css/journal.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+p {
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+}
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -16,32 +21,6 @@ body {
     padding: 0 20px;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
-}
-
-header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-header nav ul {
-    list-style: none;
-}
-
-header nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-header nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
 .section {
     padding: 40px 0;
 }
@@ -50,7 +29,7 @@ header nav ul li a {
     margin-bottom: 20px;
 }
 
-textarea {
+textarea:nth-child(2n) {
     width: 100%;
     height: 200px;
     padding: 10px;
@@ -68,4 +47,15 @@ button {
 
 button:hover {
     background-color: #555;
+}
+
+.tbl-content {
+    border: 2px solid #333;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    max-width: 1300px;
+    width: 100%;
+    margin: 20px auto;
 }
