--- a/template/page_accueil.html
+++ b/template/page_accueil.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Accueil</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/page_accueil.css') }}">
-    </head>
-    <body>
-        <header>
-            <h1>Intima</h1>
-            <nav>
-                <ul>
-                    <li><a href="{{ url_for('page_accueil') }}">Accueil</a></li>
-                    <li><a href="{{ url_for('journal') }}">Journal</a></li>
-                    <li><a href="#">À propos</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section class="intro">
-            <h2>Bienvenue dans votre journal intime en ligne</h2>
-            <p>Exprimez-vous en toute liberté, sans jugement. Intima est là pour vous.</p>
-        </section>
-        <section class="entries">
-            <article>
-                <h3>Titre de l'entrée</h3>
-                <p>Contenu de l'entrée...</p>
-                <a href="#">Lire la suite</a>
-            </article>
-            <!-- Ajoutez d'autres articles ici pour représenter les différentes entrées -->
-        </section>
-        <footer>
-            <p>&copy; 2024 Intima - Tous droits réservés</p>
-        </footer>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accueil</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/page_accueil.css') }}">
+</head>
+<body>
+    <header>
+        <h1>Intima</h1>
+        <nav>
+            <ul>
+                <li><a href="{{ url_for('page_accueil') }}">Accueil</a></li>
+                <li><a href="{{ url_for('journal', tokenUtilisateur=token) }}">Journal</a></li>
+                <li><a href="#">À propos</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="intro">
+        <h2>Bienvenue dans votre journal intime en ligne</h2>
+        <p>Exprimez-vous en toute liberté, sans jugement. Intima est là pour vous.</p>
+    </section>
+    <section class="entries">
+        <article>
+            <h3>Titre de l'entrée</h3>
+            <p>Contenu de l'entrée...</p>
+            <a href="#">Lire la suite</a>
+        </article>
+        <!-- Ajoutez d'autres articles ici pour représenter les différentes entrées -->
+    </section>
+    <footer>
+        <p>&copy; 2024 Intima - Tous droits réservés</p>
+    </footer>
+</body>
 </html>
